--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
